# Faculty-3rd-year

./: .gitignore  .gitmodules  BIA_Lab_9.ipynb  README.md
aso/: README.md
aso/Assignment 1/: lab3.cpp  output.txt  raport.txt
bia/: README.md
bia/lab1/: BIA_LAB_1.ipynb  README.md
bia/lab10/: BIA_Lab_10.ipynb  Readme.md  bia_exercises10.ipynb
bia/lab2/: BIA_Lab_2.ipynb  Readme.md  exercises_lab2.ipynb
bia/lab3/: BIA_Lab_3.ipynb  Readme.md  exercises_lab3.ipynb
bia/lab4/: BIA_Lab_4.ipynb  Readme.md  exercises4.ipynb
bia/lab5/: BIA_Lab_5.ipynb  Readme.md  exercises5.ipynb
bia/lab6/: BIA_Lab_6.ipynb  Readme.md  bia_exercises6.ipynb
bia/lab9/: BIA_Lab_9.ipynb  Readme.md  bia_exercises9.ipynb
bia/test1/: bia_test1.ipynb
bia/test2/: bia_test2.ipynb
cflp/: README.md  lab2.sln
cflp/lab10/: Game.cs  Program.cs  Readme.md  Store.cs  lab10.sln
cflp/lab2/: Readme.md  lab2.sln
cflp/lab3/: Readme.md  lab3.sln
cflp/lab4/: Readme.md  lab4.sln
cflp/lab5/: Readme.md  lab5.sln
cflp/lab6/: Readme.md  lab6.sln
cflp/lab8/: Readme.md  lab8.sln
cflp/lab9/: InputReader.cs  Program.cs  Readme.md  Tamagotchi.cs  lab9.sln
gac/lab1/: Readme.md
itsc/: Readme.md
itsc/lab2/: Readme.md  ex1.asm  ex2.asm  ex3.asm
lftc/: .gitignore  CMakeLists.txt  Readme.md  RegularExpressions.md
lftc/AtomC/: LexicalRules.md  main.c
lftc/AtomC/files/: ad.c  ad.h  lexer.c  lexer.h  parser.c  parser.h  utils.c  utils.h
lftc/AtomC/files/tests/: test.c  testlex.c  testparser.c
lftc/AtomC/optional_logging/: ad.txt  parser.txt
pdss/: README.md
pm/: Readme.md
(+103 files in other folders)
